--- a/.github/workflows/plugin-docker-scout-scan.yml
+++ b/.github/workflows/plugin-docker-scout-scan.yml
@@ -21,6 +21,16 @@ on:
         description: "Docker image tag"
         required: true
         type: string
+    secrets:
+      ACR_LOGIN_SERVER:
+        description: "Azure Container Registry login server"
+        required: true
+      DOCKERHUB_USERNAME:
+        description: "Docker Hub username"
+        required: true
+      DOCKERHUB_PASSWORD:
+        description: "Docker Hub password"
+        required: true
 
 jobs:
   scout-scan:
@@ -43,15 +53,15 @@ jobs:
 
       - name: Pull Docker Image
         run: |
-          echo "Pulling image: ${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }}"
-          docker pull ${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }}
+          echo "Pulling image: ${{ secrets.ACR_LOGIN_SERVER }}/${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }}"
+          docker pull ${{ secrets.ACR_LOGIN_SERVER }}/${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }}
 
       - name: Scan Docker Image for CVEs
         run: |
-          echo "Scanning image: ${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }}"
+          echo "Scanning image: ${{ secrets.ACR_LOGIN_SERVER }}/${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }}"
 
           # Run basic CVE scan and save output
-          docker scout cves ${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }} | tee scout-results.txt
+          docker scout cves ${{ secrets.ACR_LOGIN_SERVER }}/${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }} | tee scout-results.txt
 
           echo "✅ Docker Scout scan completed"
 
@@ -59,7 +69,7 @@ jobs:
         run: |
           echo "# 🔍 Docker Scout Security Scan Results" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Image:** \`${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Image:** \`${{ secrets.ACR_LOGIN_SERVER }}/${{ github.event.inputs.IMAGE_NAME || inputs.IMAGE_NAME }}:${{ github.event.inputs.IMAGE_TAG || inputs.IMAGE_TAG }}\`" >> $GITHUB_STEP_SUMMARY
           echo "**Scan Date:** $(date)" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
 
