--- a/.github/workflows/1-ci-pipeline.yml
+++ b/.github/workflows/1-ci-pipeline.yml
@@ -97,7 +97,7 @@ jobs:
 
       - name: Login to ACR
         run: |
-          echo ${{ secrets.ACR_PASSWORD }} | docker login ${{ secrets.ACR_LOGIN_SERVER }} -u ${{ secrets.ACR_USERNAME }} --password-stdin
+          echo ${{ secrets.ACR_PASSWORD }} | docker login -u ${{ secrets.ACR_USERNAME }} --password-stdin ${{ secrets.ACR_LOGIN_SERVER }}
 
       - name: Build Docker image
         run: |
