--- a/.github/workflows/2-staging-deploy.yml
+++ b/.github/workflows/2-staging-deploy.yml
@@ -6,6 +6,10 @@ on:
     types:
       - completed
 
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
   deploy:
     if: ${{ github.event.workflow_run.head_branch == 'staging' && github.event.workflow_run.conclusion == 'success' }}
