--- a/.github/workflows/4-monitoring.yml
+++ b/.github/workflows/4-monitoring.yml
@@ -12,8 +12,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      RESOURCE_GROUP: teddysit722Week10
-      AKS_NAME: aksteddy722Week10
+      RESOURCE_GROUP: sit722devopsteddy-rg
+      AKS_NAME: sit722devopsteddy-aks
 
     steps:
       - name: Checkout code
