--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -26,6 +26,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Inspect AZURE_CREDENTIALS keys
+        run: |
+          echo ${{ secrets.AZURE_CREDENTIALS }} | jq 'keys'
+
       - name: Azure Login
         uses: azure/login@v2
         with:
