--- a/.github/workflows/2-staging-deploy.yml
+++ b/.github/workflows/2-staging-deploy.yml
@@ -18,6 +18,11 @@ jobs:
       NAMESPACE: staging-${{ github.run_id }}
       IMAGE_TAG: ${{ github.event.workflow_run.head_sha }}
       STAGING: true
+    secrets:
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
+      ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
+      ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
 
   create-pr:
     if: ${{ github.event.workflow_run.head_branch == 'staging' && github.event.workflow_run.conclusion == 'success' }}
