--- a/.github/workflows/3-production-deploy.yml
+++ b/.github/workflows/3-production-deploy.yml
@@ -12,3 +12,8 @@ jobs:
       NAMESPACE: production
       IMAGE_TAG: latest
       STAGING: false
+    secrets:
+      AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+      ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
+      ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
+      ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
