--- a/.github/workflows/plugin-deploy.yml
+++ b/.github/workflows/plugin-deploy.yml
@@ -209,9 +209,9 @@ jobs:
       email_to: "teddyhinyp@gmail.com"
       email_subject: ${{ needs.deploy.result == 'success' && 'Production Deployment Succeeded' || 'Production Deployment Failed' }}
       email_body: |
-        Deployment to namespace ${{ inputs.NAMESPACE }} has completed.
+        Deployment to namespace ${{ github.event.inputs.NAMESPACE }} has completed.
         Status: ${{ needs.deploy.result }}
-        Image Tag: ${{ inputs.IMAGE_TAG }}
+        Image Tag: ${{ github.event.inputs.IMAGE_TAG }}
         Run URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
     secrets:
       EMAIL_USER: ${{ secrets.EMAIL_USER }}
