--- a/util/package.json
+++ b/util/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "axios": "^1.12.2",
     "jest": "^30.1.3"
+  },
+  "dependencies": {
+    "nodemailer": "^7.0.6"
   }
 }
