--- a/.github/workflows/2-staging-deploy.yml
+++ b/.github/workflows/2-staging-deploy.yml
@@ -23,6 +23,8 @@ jobs:
       ACR_USERNAME: ${{ secrets.ACR_USERNAME }}
       ACR_PASSWORD: ${{ secrets.ACR_PASSWORD }}
       ACR_LOGIN_SERVER: ${{ secrets.ACR_LOGIN_SERVER }}
+      EMAIL_USER: ${{ secrets.EMAIL_USER }}
+      EMAIL_PASSWORD: ${{ secrets.EMAIL_PASSWORD }}
 
   create-pr:
     if: ${{ github.event.workflow_run.head_branch == 'staging' && github.event.workflow_run.conclusion == 'success' }}
